fix show additional properties at startup. see #277 and #168

--- a/pages/customprompts/mzta-custom-prompts.css
+++ b/pages/customprompts/mzta-custom-prompts.css
@@ -148,6 +148,11 @@ tbody.list tr{
     font-size: small;
 }
 
+.field_title_us{
+    font-weight: bold;
+    font-size: smaller;
+}
+
 label, .id_show, .text_show, .name_show, .type_show, .action_show{
     font-size: small;
 }
