asking for the correct permission when using the Anthropic API. Fixes #389

--- a/pages/onboarding/onboarding.css
+++ b/pages/onboarding/onboarding.css
@@ -182,7 +182,7 @@ h2 {
   box-shadow: inset 5px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-#chatgpt_web_permission {
+#chatgpt_web_permission, #anthropic_api_permission {
   display: none;
   background-color: red;
   color: white;
@@ -196,12 +196,12 @@ h2 {
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-#chatgpt_web_permission:hover {
+#chatgpt_web_permission:hover, #anthropic_api_permission:hover {
   background-color: darkred;
   transform: scale(1.05);
 }
 
-#chatgpt_web_permission_ok {
+#integration_permission_ok {
   display: none;
   background-color: green;
   color: white;
@@ -213,7 +213,7 @@ h2 {
   text-align: center;
   cursor: pointer;
 }
-#chatgpt_web_permission_ok:hover {
+#integration_permission_ok:hover {
   background-color: darkgreen;
   transform: scale(1.05);
 }
