options and addtags pages are working. more tests needed and some details on the addtags page need some attention. see #438

--- a/pages/_lib/connection-ui.css
+++ b/pages/_lib/connection-ui.css
@@ -32,6 +32,11 @@ tr.conntype_anthropic_api, tr.conntype_anthropic_api2{
     font-style: italic;
 }
 
+textarea.option-textarea{
+    width: -moz-available;
+    height: 10em;
+}
+
 .api_key-container {
     position: relative;
     width: 100%;
