always showing with proper message the addtags and spamfilter rows. see #438

--- a/options/mzta-options.css
+++ b/options/mzta-options.css
@@ -104,6 +104,11 @@ div#miczTranslate{
     font-size:smaller;
 }
 
+.warn_API_needed{
+    display: none;
+    font-weight: bold;
+}
+
 #no_sparks td{
     text-align: center;
     padding: 1em !important;
