correctly hiding connection_ui_end

--- a/pages/addtags/mzta-add-tags.css
+++ b/pages/addtags/mzta-add-tags.css
@@ -79,6 +79,10 @@ table {
     background-color: #dfeaff;
 }
 
+#connection_ui_end{
+    display: none;
+}
+
 .btn_div{
     width: 100%;
     display: flex;
