css correctly imported. labels width fixed. see #102

--- a/pages/_lib/connection-ui.css
+++ b/pages/_lib/connection-ui.css
@@ -37,6 +37,10 @@ textarea.option-textarea{
     height: 10em;
 }
 
+label{
+    width: -moz-available;
+}
+
 .api_key-container {
     position: relative;
     width: 100%;
