--- a/pages/_lib/connection-ui.css
+++ b/pages/_lib/connection-ui.css
@@ -1,17 +1,17 @@
 tr.conntype_chatgpt_api, tr.conntype_chatgpt_api2{
-    background-color: rgb(185, 220, 252);
+    background-color: rgb(185, 220, 252) !important;
 }
 
 tr.conntype_chatgpt_web, tr.conntype_chatgpt_web2{
-    background-color: rgb(255, 209, 183);
+    background-color: rgb(255, 209, 183) !important;
 }
 
 tr.conntype_ollama_api, tr.conntype_ollama_api2{
-    background-color: rgb(177, 238, 169);
+    background-color: rgb(177, 238, 169) !important;
 }
 
 tr.conntype_openai_comp_api, tr.conntype_openai_comp_api2{
-    background-color: rgb(213, 169, 238);
+    background-color: rgb(213, 169, 238) !important;
 }
 
 tr.conntype_google_gemini_api, tr.conntype_google_gemini_api2{
@@ -19,7 +19,7 @@ tr.conntype_google_gemini_api, tr.conntype_google_gemini_api2{
 }
 
 tr.conntype_anthropic_api, tr.conntype_anthropic_api2{
-    background-color: rgb(255, 168, 204);
+    background-color: rgb(255, 168, 204) !important;
 }
 
 #chatgpt_model_fetch_loading{
@@ -93,19 +93,19 @@ span.opt_title{
 
 @media (prefers-color-scheme: dark) {
     tr.conntype_chatgpt_api, tr.conntype_chatgpt_api2{
-        background-color: rgb(0, 0, 58);
+        background-color: rgb(0, 0, 58) !important;
     }
 
     tr.conntype_chatgpt_web,tr.conntype_chatgpt_web2{
-        background-color: rgb(39, 11, 0);
+        background-color: rgb(39, 11, 0) !important;
     }
 
     tr.conntype_ollama_api, tr.conntype_ollama_api2{
-        background-color: rgb(7, 58, 0);
+        background-color: rgb(7, 58, 0) !important;
     }
 
     tr.conntype_openai_comp_api, tr.conntype_openai_comp_api2{
-        background-color: rgb(89, 20, 129);
+        background-color: rgb(89, 20, 129) !important;
     }
 
     tr.conntype_google_gemini_api, tr.conntype_google_gemini_api2{
@@ -113,7 +113,7 @@ span.opt_title{
     }
 
     tr.conntype_anthropic_api, tr.conntype_anthropic_api2{
-        background-color: rgb(83, 0, 35);
+        background-color: rgb(83, 0, 35) !important;
     }
 
     .api_key-container .toggle-icon img {
