--- a/pages/addtags/mzta-add-tags.css
+++ b/pages/addtags/mzta-add-tags.css
@@ -167,6 +167,9 @@ table#miczPrefs  tr:last-child td {
     color: red;
 }
 
+label:has(input[type="checkbox"]) {
+    cursor: pointer;
+}
 
 @media (prefers-color-scheme: dark) {
     body {
