tomselect css improved. see #603

--- a/pages/_lib/connection-ui.css
+++ b/pages/_lib/connection-ui.css
@@ -93,6 +93,10 @@ span.opt_title{
     font-weight: bold;
 }
 
+.ts-control, .ts-dropdown{
+    font-size: 14.4px;
+}
+
 @media (prefers-color-scheme: dark) {
     tr.conntype_chatgpt_api, tr.conntype_chatgpt_api2{
         background-color: rgb(0, 0, 58) !important;
